# ComfyUI-MimicBrush

./: .gitignore  README.md  __init__.py  infer.py  mimicbrush_workflow.json  pyproject.toml  requirements.txt
MimicBrush/depthanything/: fast_import.py
MimicBrush/depthanything/depth_anything/: dpt.py
MimicBrush/depthanything/depth_anything/util/: transform.py
MimicBrush/depthanything/torchhub/: README.md
MimicBrush/depthanything/torchhub/facebookresearch_dinov2_main/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODEL_CARD.md  README.md  conda.yaml  hubconf.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  utils.py  vision_transformer.py
MimicBrush/depthanything/torchhub/facebookresearch_dinov2_main/dinov2/: __init__.py
MimicBrush/depthanything/torchhub/facebookresearch_dinov2_main/dinov2/configs/: __init__.py  ssl_default_config.yaml
MimicBrush/depthanything/torchhub/facebookresearch_dinov2_main/dinov2/data/: __init__.py  adapters.py  augmentations.py  collate.py  loaders.py  masking.py  samplers.py  transforms.py
MimicBrush/depthanything/torchhub/facebookresearch_dinov2_main/dinov2/distributed/: __init__.py
MimicBrush/depthanything/torchhub/facebookresearch_dinov2_main/dinov2/eval/: knn.py  linear.py  log_regression.py  metrics.py  setup.py  utils.py
MimicBrush/depthanything/torchhub/facebookresearch_dinov2_main/scripts/: lint.sh
MimicBrush/mimicbrush/: __init__.py  attention_processor.py  mimicbrush_referencenet.py  resampler.py  utils.py
MimicBrush/models/: ReferenceNet.py  depth_guider.py  pipeline_mimicbrush.py
(+35 files in other folders)
