[project]
name = "comfyui-mimicbrush"
description = "a comfyui custom node for [a/MimicBrush](https://github.com/ali-vilab/MimicBrush),then inpainting with reference image."
version = "1.0.0"
license = "LICENSE"
dependencies = ["modelscope", "diffusers", "transformers==4.25.1", "accelerate"]

[project.urls]
Repository = "https://github.com/AIFSH/ComfyUI-MimicBrush"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-MimicBrush"
Icon = ""
